<resources>
    <string name="app_name">StoryAppFuku</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">Aplikasi penambah story</string>
    <string name="title_welcome_page">Selamat datang di DreamGuard!</string>
    <string name="title_signup_page">Ayo Buat Akun Sekarang!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_error">Password tidak boleh kurang dari 8 karakter</string>
    <string name="message_login_page">Input email dan password untuk masuk</string>
    <string name="title_login_page">Login DreamGuard</string>
    <string name="name">Nama</string>
    <string name="msg_title">Yeay!</string>
    <string name="msg_sub_title">Kamu berhasil login!</string>
    <string name="msg_button">Lanjut</string>
    <string name="message_main_page">Selamat Belajar di Dicoding.</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Keluar</string>
    <string name="fab_content_desc">fab</string>
    <string name="topAppBar">topAppBar</string>
    <string name="content_description_more">logout</string>
    <string name="home">Home</string>
    <string name="image">image</string>
    <string name="title_story">Title</string>
    <string name="desc">Description</string>
    <string name="btnCamera">Camera</string>
    <string name="btnGallery">Gallery</string>
    <string name="addDescription">Tambahkan deskripsi disini</string>
    <string name="btnUpload">Upload</string>
    <string name="request_permission">\"Izin diperlukan untuk menggunakan kamera dan galeri\"</string>
    <string name="error_selectImage">Pilih foto terlebih dahulu!</string>
</resources>