<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/main"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/image"
            android:minHeight="370dp"
            android:src="@drawable/baseline_image_24" />


        <Button
            android:id="@+id/btnCamera"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/purple"
            android:text="@string/btnCamera"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnGallery"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/purple"
            android:textSize="16sp"
            android:text="@string/btnGallery"
            android:textColor="@android:color/white" />


        <EditText
            android:id="@+id/descriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:gravity="top"
            android:hint="@string/addDescription"
            android:inputType="textMultiLine"
            android:lines="4"
            android:padding="8dp" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            android:backgroundTint="@color/purple"
            android:text="@string/btnSave"
            android:textColor="@android:color/white" />
    </LinearLayout>
</ScrollView>